[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Grass.png" type="Texture" id=1]
[ext_resource path="res://World/Grass.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 1 )

[node name="Grass" type="Area2D"]
collision_layer = 0
collision_mask = 25
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, -8 )
texture = ExtResource( 1 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Animate = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, -1 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8, -1 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 8, -1 )
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Grass_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Grass_body_entered"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
